--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "lodash.isequal": "^4.5.0",
     "lodash.mapvalues": "^4.6.0",
-    "qs": "^6.7.0"
+    "qs": "^6.7.0",
+    "react-shallow-context": "^1.0.1"
   },
   "husky": {
     "hooks": {
